--- a/Popup.html
+++ b/Popup.html
@@ -6,61 +6,18 @@
 	<title></title>
 </head>
 <style type="text/css">
-	.blbl{
-		color: #d99;
-	}
-	.dark{
-		color: #955;
-	}
 	.button{
-		position: relative;
-		display: flex;
-		flex-direction: row;
-		align-items: center;
-		justify-content: space-between;
-		background-color: #9cd;
-		width: 70px;
-		height: 30px;
-		border-radius: 15px;
-	}
-	.row{
-		padding: 5px;
-	}
-	.circle{
-		position: absolute;
-		top: 0;
-		left: 0;
-		height: 30px;
-		width:  30px;
-		border-radius: 15px;
-		background-color: #69a;
-		animation:  moveRight;
-	}
-	.container{
-		background-color: #ffe;
-	}
-	.box{
-		background-color: #753;
-		width: 40px;
+		background-color: #acd;
 		height: 50px;
+		width: 50px;
+		border-radius: 25px;
+		align-content: center;
+		text-align: center;
+		text-justify: auto;
 	}
-
 </style>
 <body>
-	<div class="container">
-		
-	<h1><span class="blbl">Bilibili </span><span class="dark">Dark Mode</span></h1>
-	<p>Change your bilibili webpage into dark mode</p>
-	<div class="box">
-		<img src="1.png", width=30px, height=30px>
-	</div>
-	<div class="button">
-		<div class="row">On</div>
-		<div class="row">Off</div>
-		<div class="circle"></div>
-	</div>
-
-	</div>
-	
+	<div class="button">Lights Off</div>
+	<script type="text/javascript", src = "test.js"></script>
 </body>
 </html>
